# bravo

./: .gitignore  CMakeLists.txt  LICENSE  Makefile.am  Makefile.in  README.md  configure  configure.ac  package.m4  steps.txt
apps/baretta/: CMakeLists.txt  Makefile.am  Makefile.in  main.cpp  test_version  test_version.at
apps/baretta/tests/: package.m4  test_version.at  testsuite.at
apps/exporter/: CMakeLists.txt  main.cpp  math-lib-demo-exports.txt  mustang-exports.txt
apps/gen_test_code/: CMakeLists.txt  main.cpp
apps/serrano/: CMakeLists.txt  Makefile.am  Makefile.in  install-serrano.sh  main.cpp
apps/serrano/certs/: demohost.key  demohost.pem  demorootca.key  demorootca.pem
apps/serrano/tests/: package.m4  test_version.at  testsuite  testsuite.at
apps/serrano/web/: index.html  index2.html
autom4te.cache/: output.1  requests  traces.0  traces.1
cmake/Modules/: FindBravo.cmake  FindCheck.cmake  FindLibreSSL.cmake
docs/: autotest.txt  autotest_logs.h  build-notes.txt  building_installer.txt  creating-root-certs.txt  email_notes.txt  install_location.txt  linux_building_tips.txt  private_cxx_interfaces.txt  testsuite_scripts.h
extra/: app_results.txt  build-all.bat  build-all.sh  matrix.txt  static_app_results.txt  test-all.sh
extra/math_app_demo/1.0.0/: run-with-lib-1.0.0.bat  run-with-lib-1.0.0.sh  run-with-lib-1.0.1.bat  run-with-lib-2.0.0.bat
extra/math_app_demo/1.0.0/src/: CMakeLists.txt  main.cpp  version.txt
extra/math_app_demo/1.1.0/: run-with-lib-1.1.0.bat  run-with-lib-1.2.0.bat
extra/math_app_demo/1.1.0/src/: CMakeLists.txt  main.cpp  version.txt
extra/math_app_demo/1.2.0/src/: CMakeLists.txt  main.cpp  version.txt
extra/math_app_demo/2.0.0/src/: CMakeLists.txt  main.cpp  version.txt
extra/math_app_demo/3.0.0/src/: version.txt
extra/math_app_demo/4.0.0/: CMakeLists.txt
extra/math_app_demo/4.0.0/src/: main.cpp  version.txt
extra/math_lib_demo/1.0.0/include/: base.h
extra/math_lib_demo/1.0.0/src/: CMakeLists.txt  base_p.h  math-lib-demo.def  math_lib_demo.cpp  stack.cpp  version.txt
extra/math_lib_demo/1.0.1/include/: stack.h
extra/math_lib_demo/1.0.1/src/: CMakeLists.txt  base.cpp  base_p.h  stack.cpp  version.txt
extra/math_lib_demo/1.1.0/include/: base.h  stack.h
extra/math_lib_demo/1.1.0/src/: CMakeLists.txt  stack.cpp  version.txt
extra/math_lib_demo/1.2.0/include/: stack.h
extra/math_lib_demo/1.2.0/src/: CMakeLists.txt  base_p.h  stack.cpp  version.txt
extra/math_lib_demo/2.0.0/include/: stack.h
extra/math_lib_demo/2.0.0/src/: CMakeLists.txt  version.txt
extra/math_lib_demo/3.0.0/src/: base_p.h  version.txt
extra/math_lib_demo/3.1.0/include/: stack.h
extra/math_lib_demo/3.1.0/src/: base.cpp  stack.cpp  version.txt
extra/math_lib_demo/3.2.0/: CMakeLists.txt
extra/math_lib_demo/3.2.0/include/: base.h  stack.h
extra/math_lib_demo/3.2.0/src/: base.cpp  version.txt
extra/math_lib_demo/3.3.0/src/: stack_p.h  version.txt
extra/math_lib_demo/4.0.0/include/: stack.h
extra/math_lib_demo/4.0.0/src/: version.txt
extra/math_lib_demo/4.1.0/include/: base.h  stack.h
extra/math_lib_demo/4.1.0/src/: version.txt
extra/math_lib_demo/include/: base.h  expression.h
extra/math_lib_demo/src/: base.cpp  base_p.h  expression.cpp  expression_p.h
include/: argv_parser.h  base_listen_port.h  base_server.h  base_socket.h  dir_specs.h  dir_utils.h  hex.h  http_listen_port.h  http_message.h  http_server.h  http_utils.h  io_named_pipe.h  io_stream.h  norm_socket.h  socket_stream.h  socket_utils.h  string_utils.h  tls_socket.h  url.h  vec_buf.h
include/bravo/: argv_parser.h  base_listen_port.h  base_socket.h  content_types.h  cpp_types.h  dir_specs.h  dir_utils.h  http_listen_port.h  http_message.h  http_server.h  io_named_pipe.h  lex_buffer.h  lexer.h  norm_socket.h  range_value.h  reader.h  socket_buf.h  socket_utils.h  ssl_socket.h  string_utils.h  tls_socket.h  url.h  vec_buf.h  xml.h  xml_element.h
scripts/: build-check.bat  build-configure.sh  build-release.bat  build_libressl.bat  chmod-files.sh  clean-configure.sh  org.bravotools.testbravo.plist  testbravo.sh  timer.sh  uninstall.sh  vcvars.bat
scripts/create-cert/: cpfiles.sh  makeboth.sh  makelocalcert.sh  makerootcert.sh  openssl.cnf.new  readme.txt  topem.sh
src/: CMakeLists.txt  Makefile.am  Makefile.in  argv_parser.cpp  base_listen_port.cpp  base_socket.cpp  content_types.cpp  cpp_types.cpp  hex.cpp  http_listen_port.cpp  http_message.cpp  http_utils.cpp  norm_socket.cpp  socket_utils.cpp  ssl_socket.cpp  tls_socket.cpp  url.cpp  vec_buf.cpp
tests/: CMakeLists.txt  Makefile.am  Makefile.in  check_bravo.cpp  main.cpp  package.m4  test_bravo_string_utils_header.cpp  test_bravo_string_utils_trim.cpp  testsuite  testsuite.at  testsuite1  testsuite1.at  testsuite2  testsuite2.at
