AC_INIT([libbravo], [0.0.0], [bugs@bravotools.org])
AM_INIT_AUTOMAKE([-Wall -Werror foreign])
AM_PROG_AR
AC_PROG_CXX
AC_PROG_RANLIB
AC_CONFIG_TESTDIR([.], [apps/baretta:apps/serrano])
AC_CONFIG_FILES([
 Makefile
 src/Makefile
 apps/baretta/Makefile
 apps/serrano/Makefile
 tests/Makefile
])
AC_OUTPUT

